--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-maps": "0.27.1",
     "react-native-navigation": "^7.3.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12",
